--- a/fresh/app/globals.css
+++ b/fresh/app/globals.css
@@ -31,3 +31,11 @@ body {
   padding: 20px;
   border-radius: 5px;
 }
+
+.cart-item {
+  padding: 10px;
+  display: flex;
+  justify-content: space-around;
+  border-bottom: 1px solid grey;
+  line-height: 0px;
+}
